Mon Mar 15 22:43:35 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Makefile.am: always recurse into all subdirectories.

	* FvwmBanner/Makefile.am:
	* FvwmGtk/Makefile.am:
	* FvwmScript/Makefile.am: change _PROGRAMS to configure variable,
	put real program name into EXTRA_PROGRAMS.

1999-03-13  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* FvwmGtk: New module. It implements menus, dialogs and 
	window-lists using the GTK toolkit.

1999-03-07  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* FvwmPager/FvwmPager.c (list_restack): rewritten to
	change the stacking order separately for the icon window
	and each desk, since this is how the pager organizes its
	windows.

Sat Mar 13 15:25:08 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmCommand/scripts/Makefile.am: created.  Substitutes the
	location of PERL into the scripts.
	* FvwmCommand/Makefile.am: removed scipts/* from EXTRA_DIST,
	recurse into scripts dir instead.

Sat Mar 13 14:44:19 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmScript/INSTALL: removed obsolete file.

Sat Mar 13 14:29:41 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmConsole/FvwmConsoleC.pl: replaced by FvwmConsoleC.pl.in
	* FvwmConsole/Makefile.am: generate FvwmConsoleC.pl from
	corresponding .in file, substituting perl path.

	* FvwmConsole/changepath.sh
	* FvwmConsole/INSTALL: removed obsolete files.
	
	* FvwmCommand/findcmd:
	* FvwmCommand/findcmd.pl: rewritten as filters, so as not to be
	dependent on finding ../../fvwm/command.c.  The makefile now takes
	care of supplying the input & output paths.
	
	* FvwmCommand/Makefile.am: build and install FvwmCommand.sh and
	FvwmCommand.pm.

Sat Mar 13 11:52:39 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmCommand/INSTALL: removed obsolete file.
	* FvwmCommand/ex-grpmv.pl: moved to scripts directory, replacing
	slightly different version.  Hopefully this is the up-to-date one.

	* FvwmCommand/ex-auto.pl: